--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GMAIL_USER = arshadmahemoodpatel@gmail.com
-GMAIL_PASS = vehsvsjhupavmaqx
+GMAIL_USER=your-email@gmail.com
+GMAIL_PASS=your-password
